[gd_scene load_steps=25 format=2]

[ext_resource path="res://Resources/Textures/containingRing.png" type="Texture" id=1]
[ext_resource path="res://Enemies/ContainingRing/containingRing.gd" type="Script" id=2]

[sub_resource type="SegmentShape2D" id=1]
b = Vector2( 46.1378, 3.74918 )

[sub_resource type="SegmentShape2D" id=2]
b = Vector2( 49.1938, 15.865 )

[sub_resource type="SegmentShape2D" id=3]
b = Vector2( 42.1098, 23.114 )

[sub_resource type="SegmentShape2D" id=4]
b = Vector2( 39.533, 34.9851 )

[sub_resource type="SegmentShape2D" id=5]
b = Vector2( 33.2314, 49.3177 )

[sub_resource type="SegmentShape2D" id=6]
b = Vector2( 21.2621, 58.7672 )

[sub_resource type="SegmentShape2D" id=7]
a = Vector2( 0, -0.727 )
b = Vector2( 3.78354, 51.9994 )

[sub_resource type="SegmentShape2D" id=8]
b = Vector2( -10.0675, 62.7802 )

[sub_resource type="SegmentShape2D" id=9]
a = Vector2( 0, -0.493 )
b = Vector2( -25.8792, 54.5861 )

[sub_resource type="SegmentShape2D" id=10]
b = Vector2( -37.2567, 45.9164 )

[sub_resource type="SegmentShape2D" id=11]
b = Vector2( -59.5405, 39.6096 )

[sub_resource type="SegmentShape2D" id=12]
b = Vector2( -69.2108, 18.1668 )

[sub_resource type="SegmentShape2D" id=13]
b = Vector2( -63.3245, 0.0874939 )

[sub_resource type="SegmentShape2D" id=14]
b = Vector2( -63.108, -18.85 )

[sub_resource type="SegmentShape2D" id=15]
b = Vector2( -59.8094, -39.9997 )

[sub_resource type="SegmentShape2D" id=16]
b = Vector2( -49.0619, -62.7799 )

[sub_resource type="SegmentShape2D" id=17]
b = Vector2( -21.6819, -63.5387 )

[sub_resource type="SegmentShape2D" id=18]
b = Vector2( -2.71214, -73.3491 )

[sub_resource type="SegmentShape2D" id=19]
b = Vector2( 26.4306, -80.0637 )

[sub_resource type="SegmentShape2D" id=20]
b = Vector2( 50.4994, -66.3775 )

[sub_resource type="SegmentShape2D" id=21]
b = Vector2( 73.6243, -45.1404 )

[sub_resource type="SegmentShape2D" id=22]
b = Vector2( 76.9279, -11.1609 )

[node name="containingRing" type="KinematicBody2D" groups=[
"enemy",
]]
collision_layer = 2
collision_mask = 4
script = ExtResource( 2 )

[node name="sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="collisionShape1" type="CollisionShape2D" parent="."]
position = Vector2( -0.233433, -227.543 )
shape = SubResource( 1 )

[node name="collisionShape2" type="CollisionShape2D" parent="."]
position = Vector2( 43.801, -224.03 )
shape = SubResource( 2 )

[node name="collisionShape3" type="CollisionShape2D" parent="."]
position = Vector2( 91.6724, -208.148 )
shape = SubResource( 3 )

[node name="collisionShape4" type="CollisionShape2D" parent="."]
position = Vector2( 131.637, -185.641 )
shape = SubResource( 4 )

[node name="collisionShape5" type="CollisionShape2D" parent="."]
position = Vector2( 171.034, -150.246 )
shape = SubResource( 5 )

[node name="collisionShape6" type="CollisionShape2D" parent="."]
position = Vector2( 203.792, -101.109 )
shape = SubResource( 6 )

[node name="collisionShape7" type="CollisionShape2D" parent="."]
position = Vector2( 223.919, -42.7149 )
shape = SubResource( 7 )

[node name="collisionShape8" type="CollisionShape2D" parent="."]
position = Vector2( 227.368, 8.98984 )
shape = SubResource( 8 )

[node name="collisionShape9" type="CollisionShape2D" parent="."]
position = Vector2( 216.505, 70.795 )
shape = SubResource( 9 )

[node name="collisionShape10" type="CollisionShape2D" parent="."]
position = Vector2( 190.884, 124.032 )
shape = SubResource( 10 )

[node name="collisionShape11" type="CollisionShape2D" parent="."]
position = Vector2( 154.725, 169.02 )
shape = SubResource( 11 )

[node name="collisionShape12" type="CollisionShape2D" parent="."]
position = Vector2( 96.2826, 208.542 )
shape = SubResource( 12 )

[node name="collisionShape13" type="CollisionShape2D" parent="."]
position = Vector2( 29.0109, 226.201 )
shape = SubResource( 13 )

[node name="collisionShape14" type="CollisionShape2D" parent="."]
position = Vector2( -32.9386, 226.601 )
shape = SubResource( 14 )

[node name="collisionShape15" type="CollisionShape2D" parent="."]
position = Vector2( -92.9743, 209.822 )
shape = SubResource( 15 )

[node name="collisionShape16" type="CollisionShape2D" parent="."]
position = Vector2( -153.541, 168.925 )
shape = SubResource( 16 )

[node name="collisionShape17" type="CollisionShape2D" parent="."]
position = Vector2( -201.897, 105.256 )
shape = SubResource( 17 )

[node name="collisionShape18" type="CollisionShape2D" parent="."]
position = Vector2( -224.17, 43.4182 )
shape = SubResource( 18 )

[node name="collisionShape19" type="CollisionShape2D" parent="."]
position = Vector2( -226.058, -29.732 )
shape = SubResource( 19 )

[node name="collisionShape20" type="CollisionShape2D" parent="."]
position = Vector2( -200.101, -108.074 )
shape = SubResource( 20 )

[node name="collisionShape21" type="CollisionShape2D" parent="."]
position = Vector2( -149.132, -174.145 )
shape = SubResource( 21 )

[node name="collisionShape22" type="CollisionShape2D" parent="."]
position = Vector2( -77.3977, -216.147 )
shape = SubResource( 22 )

[node name="speedChangeTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="alphaTween" type="Tween" parent="."]

[connection signal="timeout" from="speedChangeTimer" to="." method="_on_speedChangeTimer_timeout"]
